<resources>
    <string name="app_name">Laboratorio 05</string>

    <string-array name="array_ufs">
        <item>Acre</item>
        <item>Amazonas</item>
        <item>Rio de Janeiro</item>
        <item>São Paulo</item>
        <item>Santa Catarina</item>
        <item>Paraná</item>
    </string-array>

    <string name="nome">Nome Completo</string>
    <string name="email">Email</string>
    <string name="idade">Idade</string>

    <string name="masc">Masculino</string>
    <string name="fem">Feminino</string>

    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="atualiza_auto">Atualizações Automáticas?</string>
    <string name="aceito">Aceito os termos da aplicação</string>
</resources>
