<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.java.android.laboratorio05.PrincipalActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nomeEditText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/nome" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:layout_below="@+id/nomeEditText"
        android:hint="@string/email"
        android:layout_alignStart="@+id/nomeEditText"
        android:layout_alignEnd="@+id/nomeEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idadeEditText"
        android:layout_below="@+id/emailEditText"
        android:hint="@string/idade"
        android:layout_alignStart="@+id/nomeEditText"
        android:layout_alignEnd="@+id/nomeEditText" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ufsSpinner"
        android:layout_below="@+id/idadeEditText"
        android:layout_centerHorizontal="true"
        android:entries="@array/array_ufs" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ufsSpinner"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masc"
            android:id="@+id/radioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fem"
            android:id="@+id/radioButton2" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/toggleButton"
            android:textOff="@string/nao"
            android:textOn="@string/sim" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/atualiza_auto"
            android:id="@+id/textView" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceito"
        android:id="@+id/checkBox"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
